# lizenzmanager_ucs

./: .black  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  EXAMPLES.md  LICENSE  Module.js  Page.js  README.md  build_release.py  getting_started.md  rename_packages.py
.gitlab-ci/: base-deb.yml  base.yml
.gitlab/issue_templates/: UserStoryTemplate.md
_dev/license-retrival-mock-server/: Dockerfile  README.md  docker-compose.yml  (+1 more)
bildungslogin-plugin/: .pre-commit-config.yaml  30bildungslogin-plugin.uinst  39bildungslogin-plugin-openapi-client.inst  40bildungslogin-plugin.inst  60bildungslogin-plugin.uinst  61bildungslogin-plugin-openapi-client.uinst  64bildungslogin-plugin-openapi-client.uinst  69bildungslogin-plugin-openapi-client.inst  70bildungslogin-plugin.inst  LICENCE  README.md  TODO.md  bildungslogin_build_ucs_school_api_cache.py  bildungslogin_get_missing_metadata.py  bildungslogin_update_license_status.py  build_ucs_school_api_cache.py  get_missing_metadata.py  install_udm_rest_api_client  pyproject.toml
bildungslogin-plugin/bildungslogin_plugin/: __init__.py  backend.py  backend_udm_rest_api.py  bildungslogin_plugin.py  models.py  plugin.py
bildungslogin-plugin/bildungslogin_plugin/routes/v1/: users.py
bildungslogin-plugin/conffiles/etc/cron.d/: bildungslogin-get-metadata  bildungslogin-rebuild-cache  bildungslogin-refresh-cache  bildungslogin-update-license-status
bildungslogin-plugin/debian/: bildungslogin-plugin-openapi-client.install  bildungslogin-plugin-openapi-client.postinst  bildungslogin-plugin-openapi-client.postrm  bildungslogin-plugin-openapi-client.prerm  bildungslogin-plugin.dirs  bildungslogin-plugin.install  bildungslogin-plugin.postinst  bildungslogin-plugin.postrm  bildungslogin-plugin.prerm  bildungslogin-plugin.univention-config-registry  bildungslogin-plugin.univention-config-registry-variables  changelog  control  copyright  rules  ucs-test-bildungslogin-prov-api.install  ucs-test-bildungslogin-prov-api.postinst  ucs-test-bildungslogin-prov-api.postrm  ucs-test-bildungslogin-prov-api.prerm  ucs-test-vbm-prov-api.postinst  ucs-test-vbm-prov-api.prerm  ucslint.overrides
bildungslogin-plugin/opa/: rules.rego
bildungslogin-plugin/tests/integration_tests/: conftest.py  test_backend.py
bildungslogin-plugin/tests/unittests/: conftest.py  test_backend_udm_rest_api.py  test_bildungslogin_plugin.py  test_models.py  test_plugin.py  test_routes_users.py
bildungslogin-plugin/ucs-test/97_bildungslogin_prov_api/: 01_in_container_unittests  02_in_container_integration_tests
bildungslogin-plugin/ucs-test/97_vbm_prov_api/: 01_in_container_unittests  02_in_container_integration_tests
python-bildungslogin/: bildungslogin_metadata.py  bildungslogin_user.py  setup.py  vbm_metadata.py
python-bildungslogin-cli/: setup.py
ucs-school-umc-licenses/: 38ucs-school-umc-licenses.inst
udm-bildungslogin/: 32udm-bildungslogin.uinst  68udm-bildungslogin.inst  68udm-bildungslogin.sh
(+202 files in other folders)
