[tool.poetry]
name = "bildungslogin-plugin"
version = "1.0.0"
description = "This is a plugin for the ucsschool-apis app to create a REST API resource for use by bildungslogin.de."
authors = ["Joerg Baach <baach@univention.de>", "Daniel Troeder <troeder@univention.de"]
license = "AGPL V3"
maintainers = ["Univention GmbH <packages@univention.de>"]
homepage = "https://univention.de"
documentation = "https://docs.software-univention.de/developers_4.4.html.de"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[tool.poetry.plugins."ucsschool_apis.plugins"]
"bildungslogin" = "bildungslogin_plugin.plugin:BildungsloginPlugin"

[tool.poetry.dependencies]
python = "^3.9"
udm-rest-client = "^1"

[tool.poetry.dev-dependencies]
factory_boy = "^3.2.0"
Faker = "^8.11.0"
kelvin-rest-api-client = "^2"
nest-asyncio = "^1.5.1"
pytest = "^6.2"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
toml = "^0.10.2"
click = "7.1.2"
packaging = "20.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
